--- a/src/features/view/HeaderView.css
+++ b/src/features/view/HeaderView.css
@@ -1,1 +1,23 @@
-/*  */
+.site-header {
+    position: relative;
+    background-color: #E9E1D6;
+    /* height: 70px; */
+}
+
+.wrapper {
+    /* max-width: 1140px; */
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.site-header__wrapper {
+    padding-top: 0;
+    padding-bottom: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* padding-top: 1rem;
+    padding-bottom: 1rem; */
+}
