--- a/src/features/movies/MoviesShowing.css
+++ b/src/features/movies/MoviesShowing.css
@@ -1,11 +1,3 @@
-.poster {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 150px;
-    Max-height: 150px;
-}
-
 table {
     display: flex;
     justify-content: center;
@@ -20,6 +12,19 @@ table {
 .movie-layout {
     /* min-width: 205px; */
     /* width: 120px; */
+}
+
+.poster {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* height: 200px; */
+    /* Max-height: 200px; */
+}
+
+.poster-image{
+    height: 210px;
+    max-height: 210px;
 }
 
 .movie-title {
