--- a/src/features/movies/SearchDialog.css
+++ b/src/features/movies/SearchDialog.css
@@ -1,13 +1,15 @@
 .searchDialog{
-    position:fixed;
-    top: 0px;
-    left: 0px;
+    /* position:fixed; */
+    /* top: 0px; */
+    /* left: 5%; */
     /* height: 100px; */
-    width: 1000px;
-    z-index: 1000;
-    display: block;
-    border: 1px solid black;
-    padding: 5px;
-    background-color: white;
-    box-shadow: 5px;
+    /* width: 90%; */
+    /* z-index: 1000; */
+    /* display: block; */
+    /* border: 1px solid black; */
+    /* padding: 5px; */
+    /* background-color: white; */
+    /* box-shadow: 5px; */
+    /* box-shadow: rgba(100, 100, 111, 0.3) 0px 7px 29px 0px; */
+    /* border-radius: 12px; */
 }
