--- a/src/App.css
+++ b/src/App.css
@@ -26,14 +26,15 @@
 
 .Title-header {
   width: 100%; /* テーブル全体をウィンドウ幅に合わせる */
-  background-color: #282c34;
-  /* min-height: 100vh; */
+  height: 30px;
+  /* background-color: #282c34; */
+  /* min-height: 20vh; */
   display: flex;
   /* flex-direction: column; */
   /* align-items: center; */
   /* justify-content: center; */
   font-size: calc(10px + 2vmin);
-  color: white;
+  /* color: white; */
 }
 
 .Title-table {
@@ -42,18 +43,6 @@
 
 .Title-tr {
   width: 100%; /* テーブル全体をウィンドウ幅に合わせる */
-}
-
-.title {
-  width: 33.33%;
-}
-
-.column {
-  width: 10%;
-}
-
-.myPage {
-  width: 10%;
 }
 
 .App-link {
